--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2018.11.29
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==4.5.2
 Django==2.1.2
 django-rest-swagger==2.2.0
 djangorestframework==3.9.0
