modified travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ python:
   - "3.7-dev"  # 3.7 development branch
 
 # environment variables
-# env:
-#   global:
-#     - CC_TEST_REPORTER_ID=6d3379169de0e2a1a780f93c8f0545849b6227531f6f891b3da576b1ff24624c
+env:
+  global:
+    - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
+    # - CODECLIMATE_REPO_TOKEN=.env.TEST_REPORTER_ID
+    - CC_TEST_REPORTER_ID=env.CC_TEST_REPORTER_ID
 
 # command to install dependencies
 install:
@@ -20,6 +22,8 @@ install:
 # create database
 before_script:
   # - psql -c 'create database mc_management;' -U postgres
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
   - python manage.py makemigrations
   - python manage.py migrate
 
