--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_script:
 # command to run tests
 script:
   # - coverage run --source=authors manage.py test
-  - coverage run manage.py test
+  - coverage run -m manage.py test
   # - COVERALLS_REPO_TOKEN="ujioY6o1FFgyYOEeb7Kl0O4yX06KxyLxe" coveralls
 
 # after-success:
