--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,8 @@ before_script:
 # command to run tests
 script:
   # - coverage run --source=authors manage.py test
-  - coverage run -m manage.py test
+  - coverage run manage.py test
   # - COVERALLS_REPO_TOKEN="ujioY6o1FFgyYOEeb7Kl0O4yX06KxyLxe" coveralls
 
-# after-success:
-#   coveralls
+after-success:
+  - coverage report -m
