modified travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,6 @@ before_script:
 script:
   # - coverage run --source=authors manage.py test
   - coverage run manage.py test
-  # - COVERALLS_REPO_TOKEN="ujioY6o1FFgyYOEeb7Kl0O4yX06KxyLxe" coveralls
-
-after-success:
+  - codeclimate-test-reporter
   - coverage report -m
+  # - COVERALLS_REPO_TOKEN="ujioY6o1FFgyYOEeb7Kl0O4yX06KxyLxe" coveralls
