--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,6 @@ before_script:
 script:
   # - coverage run --source=authors manage.py test
   - coverage run manage.py test
-  - codeclimate-test-reporter
+  - codeclimate-test-reporter --file .coverage
   - coverage report -m
   # - COVERALLS_REPO_TOKEN="ujioY6o1FFgyYOEeb7Kl0O4yX06KxyLxe" coveralls
