--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install coverage
+  - pip install codeclimate-test-reporter
 
 # start postgres in travis
 # services:
