modified travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ install:
 # create database
 before_script:
   # - psql -c 'create database mc_management;' -U postgres
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
+  # - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  # - chmod +x ./cc-test-reporter
   - python manage.py makemigrations
   - python manage.py migrate
 
