--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,6 @@ env:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
-  - pip install coverage
-  - pip install codeclimate-test-reporter
 
 # start postgres in travis
 # services:
@@ -23,9 +21,9 @@ install:
 
 # create database
 before_script:
-  # - psql -c 'create database mc_management;' -U postgres
-  # - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  # - chmod +x ./cc-test-reporter
+  - psql -c 'create database mc_management;' -U postgres
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
   - python manage.py makemigrations
   - python manage.py migrate
 
@@ -33,6 +31,6 @@ before_script:
 script:
   # - coverage run --source=authors manage.py test
   - coverage run manage.py test
-  - codeclimate-test-reporter --file .coverage
-  - coverage report -m
+  - cc-test-reporter --file .coverage
+  - coverage report -m 
   # - COVERALLS_REPO_TOKEN="ujioY6o1FFgyYOEeb7Kl0O4yX06KxyLxe" coveralls
