--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,5 @@ before_script:
 script:
   # - coverage run --source=authors manage.py test
   - coverage run manage.py test
-  - cc-test-reporter --file .coverage
-  - coverage report -m 
+  - cc-test-reporter 
   # - COVERALLS_REPO_TOKEN="ujioY6o1FFgyYOEeb7Kl0O4yX06KxyLxe" coveralls
