--- a/.travis.yml
+++ b/.travis.yml
@@ -24,12 +24,13 @@ before_script:
   - psql -c 'create database mc_management;' -U postgres
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
-  - python manage.py makemigrations
-  - python manage.py migrate
+
 
 # command to run tests
 script:
   # - coverage run --source=authors manage.py test
-  - coverage run manage.py test
+  - python manage.py makemigrations
+  - python manage.py migrate
+  - coverage run --source=mc_management_system manage.py test
   - cc-test-reporter 
   # - COVERALLS_REPO_TOKEN="ujioY6o1FFgyYOEeb7Kl0O4yX06KxyLxe" coveralls
